# DreamMaker

./: .gitignore  README.md  pyproject.toml
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
Plano/: Cérebro.md  Esqueleto.md  Etapa-1.md  Etapa-2.md  Etapa-3.md  Etapa-4.md  Etapa-5.md  Etapa-6.md  Metatrader 5 no WSL e GitHub Actions.md
config/: config.py
docs/: ajuda-1.md  feito.txt  mt5-status-report.md
docs/reports/: Stage_1_Documentation.md
memory/agents/: README.md
memory/sessions/: README.md
src/agents/: base_agent.py  coordinator.py  data_agent.py  feature_agent.py
src/features/: hawkes_process.py  microstructure.py
src/mt5/: mock_mt5.py  mt5_bridge.py
src/utils/: mock_mt5.py  mt5_bridge.py
tests/unit/: test_microstructure.py
